Add Description for the form element

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
   <div class="container">
     <h1>Contact Us</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo recusandae obcaecati dolore sunt eveniet suscipit cupiditate amet ullam ea autem molestias similique unde explicabo at fugit, eligendi maiores illo accusantium!</p>
+    
     <form name="contact" method="POST" data-netlify="true" action="/success.html">
       <input type="hidden" name="form-name" value="contact" />
       
